--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       overflow: hidden;
+      position: relative;
     }
 
     .card {
@@ -24,8 +25,7 @@
       box-shadow: 0 20px 40px rgba(0,0,0,0.15);
       max-width: 340px;
       animation: popIn 0.8s ease;
-      position: relative;
-      z-index: 2;
+      z-index: 1;
     }
 
     @keyframes popIn {
@@ -60,6 +60,7 @@
       margin: 6px;
       transition: transform 0.2s ease;
       position: absolute;
+      z-index: 2;
     }
 
     button:hover { transform: scale(1.05); }
@@ -67,17 +68,11 @@
     #yes {
       background: #ff4d6d;
       color: white;
-      left: 50%;
-      transform: translateX(-60%);
-      bottom: 20px;
     }
 
     #no {
       background: #eee;
       color: #555;
-      left: 50%;
-      transform: translateX(10%);
-      bottom: 20px;
     }
 
     .overlay {
@@ -115,87 +110,15 @@
     <h1>💖 Hey Sarah 💖</h1>
     <p>Will you be my Valentine?</p>
     <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cute animated cat" />
-
-    <button id="yes">Yes 💕</button>
-    <button id="no">No 😢</button>
   </div>
+
+  <button id="yes">Yes 💕</button>
+  <button id="no">No 😢</button>
 
   <div class="overlay" id="overlay">
     <img src="https://media.giphy.com/media/3o7TKsQ8gqG6pJ8D0k/giphy.gif" alt="Mr Bean doctor gif" />
-    <h1 style="color:white">Officially Certified Valentine 💘</h1>
+    <h1 style="color:white">That's right 😌💘</h1>
   </div>
 
   <script>
-    const noBtn = document.getElementById('no');
-    const yesBtn = document.getElementById('yes');
-    const overlay = document.getElementById('overlay');
-
-    // NO button dodges mouse
-    document.addEventListener('mousemove', (e) => {
-      const rect = noBtn.getBoundingClientRect();
-      const dx = e.clientX - (rect.left + rect.width / 2);
-      const dy = e.clientY - (rect.top + rect.height / 2);
-      const distance = Math.sqrt(dx * dx + dy * dy);
-
-      if (distance < 120) {
-        moveButton(noBtn);
-      }
-    });
-
-    // YES button moves for first few seconds
-    let yesActive = true;
-    const yesInterval = setInterval(() => {
-      if (yesActive) moveButton(yesBtn);
-    }, 600);
-
-    setTimeout(() => {
-      yesActive = false;
-      yesBtn.style.left = '50%';
-      yesBtn.style.bottom = '20px';
-      yesBtn.style.transform = 'translateX(-50%)';
-      clearInterval(yesInterval);
-    }, 5000);
-
-    function moveButton(btn) {
-      const x = Math.random() * (window.innerWidth - 120);
-      const y = Math.random() * (window.innerHeight - 60);
-      btn.style.left = x + 'px';
-      btn.style.top = y + 'px';
-    }
-
-    // YES click celebration
-    yesBtn.addEventListener('click', () => {
-      overlay.style.display = 'flex';
-
-      // Change message text
-      const message = document.querySelector('#overlay h1');
-      message.textContent = "That's right 😌💘";
-
-      // Fireworks
-      for (let i = 0; i < 40; i++) {
-        const fw = document.createElement('div');
-        fw.className = 'firework';
-        fw.textContent = ['🎆','🎇','✨','💖'][Math.floor(Math.random()*4)];
-        fw.style.left = Math.random() * 100 + 'vw';
-        fw.style.top = Math.random() * 100 + 'vh';
-        document.body.appendChild(fw);
-        setTimeout(() => fw.remove(), 2500);
-      }
-
-      // Auto-send follow-up (opens message after delay)
-      setTimeout(() => {
-        window.location.href = 'https://wa.me/?text=' + encodeURIComponent("That's right 😌💘 Guess that makes us Valentines ❤️");
-      }, 3500);
-    });
-        fw.className = 'firework';
-        fw.textContent = ['🎆','🎇','✨','💖'][Math.floor(Math.random()*4)];
-        fw.style.left = Math.random() * 100 + 'vw';
-        fw.style.top = Math.random() * 100 + 'vh';
-        document.body.appendChild(fw);
-        setTimeout(() => fw.remove(), 2500);
-      }
-    });
-  </script>
-
-</body>
-</html>
+    const noBtn = docu
