--- a/index.html
+++ b/index.html
@@ -100,17 +100,17 @@
 <body>
 
   <div class="card" id="card">
-    <h1>💖 Hey Sarah 💖</h1>
+    <h1>💖 Hey Sesh 💖</h1>
     <p>Will you be my Valentine?</p>
     <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cute animated cat" />
   </div>
 
   <button id="yes">Yes 💕</button>
-  <button id="no">No 😢</button>
+  <button id="no">No ❌</button>
 
   <div class="overlay" id="overlay">
-    <img src="https://media.giphy.com/media/3o7TKsQ8gqG6pJ8D0k/giphy.gif" alt="Mr Bean doctor gif" />
-    <h1 style="color:white">That's right 😌💘</h1>
+    <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzZyOXh0N3ZlZWk0cmtsY256eHBtcWZwODBidTB2cjk0enIxc2QxayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9Ai5dIk8xvBm0/giphy.gif" alt="Mr Bean doctor gif" />
+    <h1 style="color:white">That's right 😏😏</h1>
   </div>
 
   <script>
