--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Sarah, Will You Be My Valentine?</title>
+<title>Will You Be My Valentine?</title>
 
 <style>
 body {
@@ -14,10 +14,9 @@ body {
   overflow: hidden;
 }
 
-/* Card */
 .card {
   background: white;
-  padding: 50px 40px 40px;
+  padding: 50px 40px;
   border-radius: 25px;
   text-align: center;
   box-shadow: 0 20px 40px rgba(0,0,0,0.15);
@@ -29,26 +28,11 @@ body {
   z-index: 1;
 }
 
-h1 {
-  color: #ff4d6d;
-  font-size: 28px;
-}
-
-p {
-  font-size: 18px;
-  color: #444;
-}
+h1 { color: #ff4d6d; font-size: 28px; }
+p  { font-size: 18px; color: #444; }
 
 img.cat {
   width: 220px;
   margin: 20px auto;
   display: block;
-  border-radius: 14px;
-}
-
-/* Buttons */
-button {
-  position: absolute;
-  padding: 18px 28px;
-  border-radius: 999px;
-  font-size: 2
+  border-radi
