--- a/index.html
+++ b/index.html
@@ -1,191 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
 <title>Will You Be My Valentine?</title>
+
 <style>
-  body {
-    margin: 0;
-    height: 100vh;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    overflow: hidden;
-    position: relative;
-  }
+body {
+  margin: 0;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  overflow: hidden;
+  position: relative;
+}
 
-  .card {
-    background: white;
-    padding: 50px 40px 40px;
-    border-radius: 25px;
-    text-align: center;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.15);
-    max-width: 400px;
-    animation: popIn 0.8s ease;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-  }
+.card {
+  background: white;
+  padding: 40px;
+  border-radius: 25px;
+  text-align: center;
+  width: 380px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+  z-index: 1;
+}
 
-  @keyframes popIn {
-    0% { transform: scale(0.6) translate(-50%, -50%); opacity: 0; }
-    100% { transform: scale(1) translate(-50%, -50%); opacity: 1; }
-  }
+h1 { color: #ff4d6d; }
 
-  h1 {
-    color: #ff4d6d;
-    margin-bottom: 15px;
-    font-size: 28px;
-  }
+img.cat {
+  width: 240px;
+  margin-top: 20px;
+  border-radius: 15px;
+}
 
-  p {
-    color: #444;
-    margin-bottom: 20px;
-    font-size: 18px;
-  }
-
-  img.cat {
-    width: 220px;
-    margin: 15px auto 25px;
-    display: block;
-    border-radius: 14px;
-  }
-
-  button {
-    border: none;
-    padding: 18px 28px;
-    border-radius: 999px;
-    font-size: 22px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    position: absolute;
-    z-index: 2;
-  }
-
-  button:hover { transform: scale(1.1); }
-
-  #yes { background: #ff4d6d; color: white; }
-  #no { background: #eee; color: #555; }
-
-  .overlay {
-    position: fixed;
-    inset: 0;
-    background: rgba(0,0,0,0.6);
-    display: none;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    z-index: 5;
-  }
-
-  .overlay img {
-    width: 400px;
-    border-radius: 14px;
-    margin-bottom: 25px;
-  }
-
-  .firework {
+button {
   position: absolute;
-  font-size: 28px;
-  animation: explode 6s ease-out forwards;
-  pointer-events: none;
-  }
+  padding: 18px 34px;
+  font-size: 22px;
+  border-radius: 999px;
+  border: none;
+  cursor: pointer;
+  z-index: 5;
+  transition: left 0.8s ease, top 0.8s ease;
+}
 
-  @keyframes explode {
-  0% {
-    transform: scale(0.2) translateY(0);
-    opacity: 1;
-  }
-  70% {
-    opacity: 1;
-  }
-  100% {
-    transform: scale(2.2) translateY(-180px);
-    opacity: 0;
-  }
+#yes { background: #ff4d6d; color: white; }
+#no { background: #eee; color: #555; }
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.7);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 10;
+}
+
+.overlay img {
+  width: 420px;
+  border-radius: 15px;
+}
+
+.firework {
+  position: fixed;
+  font-size: 40px;
+  animation: explode 3s ease-out forwards;
+}
+
+@keyframes explode {
+  0% { transform: scale(0.3); opacity: 1; }
+  100% { transform: scale(2) translateY(-200px); opacity: 0; }
 }
 </style>
 </head>
+
 <body>
 
 <div class="card">
-  <h1>💖 Hey Sesh 💖</h1>
-  <p>Will you be my Valentine?</p>
-  <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cute animated cat" />
+  <h1>💖 Will you be my Valentine Sarah? 💖</h1>
+  <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif">
 </div>
 
 <button id="yes">Yes 💕</button>
 <button id="no">No ❌</button>
 
 <div class="overlay" id="overlay">
-  <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNzZyOXh0N3ZlZWk0cmtsY256eHBtcWZwODBidTB2cjk0enIxc2QxayZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/9Ai5dIk8xvBm0/giphy.gif" alt="Mr Bean doctor gif" />
-  <h1 style="color:white; font-size:36px">That's right 😏😏</h1>
+  <img src="https://media.giphy.com/media/9Ai5dIk8xvBm0/giphy.gif">
+  <h1 style="color:white;">That’s right 😏</h1>
 </div>
 
 <script>
-const yesBtn = document.getElementById('yes');
-const noBtn = document.getElementById('no');
-const overlay = document.getElementById('overlay');
+window.onload = () => {
+  const yes = document.getElementById('yes');
+  const no = document.getElementById('no');
+  const overlay = document.getElementById('overlay');
 
-// Buttons initial position
-function moveButton(btn){
-  const x = Math.random() * (window.innerWidth - btn.offsetWidth);
-  const y = Math.random() * (window.innerHeight - btn.offsetHeight);
-  btn.style.left = x + 'px';
-  btn.style.top = y + 'px';
-}
-
-// Set initial positions
-moveButton(yesBtn);
-moveButton(noBtn);
-
-// NO button dodges mouse
-document.addEventListener('mousemove', e => {
-  const rect = noBtn.getBoundingClientRect();
-  const dx = e.clientX - (rect.left + rect.width/2);
-  const dy = e.clientY - (rect.top + rect.height/2);
-  const distance = Math.sqrt(dx*dx + dy*dy);
-  if(distance < 140){
-    moveButton(noBtn);
+  function move(btn) {
+    const x = Math.random() * (window.innerWidth - btn.offsetWidth - 20);
+    const y = Math.random() * (window.innerHeight - btn.offsetHeight - 20);
+    btn.style.left = x + 'px';
+    btn.style.top = y + 'px';
   }
-});
 
-// Smooth YES movement using requestAnimationFrame
-let yesActive = true;
-let targetX = Math.random() * (window.innerWidth - yesBtn.offsetWidth);
-let targetY = Math.random() * (window.innerHeight - yesBtn.offsetHeight);
+  move(yes);
+  move(no);
 
-function animateYes(){
-  if(!yesActive) return;
-  const rect = yesBtn.getBoundingClientRect();
-  let dx = targetX - rect.left;
-  let dy = targetY - rect.top;
-  yesBtn.style.left = rect.left + dx * 0.08 + 'px';
-  yesBtn.style.top = rect.top + dy * 0.08 + 'px';
-  if(Math.abs(dx) < 5 && Math.abs(dy) < 5){
-    targetX = Math.random() * (window.innerWidth - yesBtn.offsetWidth);
-    targetY = Math.random() * (window.innerHeight - yesBtn.offsetHeight);
-  }
-  requestAnimationFrame(animateYes);
-}
-animateYes();
-setTimeout(()=>{ yesActive=false; }, 10000);
+  // NO dodges mouse
+  document.addEventListener('mousemove', e => {
+    const r = no.getBoundingClientRect();
+    const dx = e.clientX - (r.left + r.width / 2);
+    const dy = e.clientY - (r.top + r.height / 2);
+    if (Math.sqrt(dx*dx + dy*dy) < 130) move(no);
+  });
 
-// YES click
-yesBtn.addEventListener('click', ()=>{
-  overlay.style.display = 'flex';
+  // YES moves smoothly for 10 seconds
+  const yesMove = setInterval(() => move(yes), 900);
+  setTimeout(() => clearInterval(yesMove), 10000);
 
-  // Fireworks
-for (let i = 0; i < 40; i++) {
-  const fw = document.createElement('div');
-  fw.className = 'firework';
-  fw.textContent = ['🎆', '🎇', '✨', '💖'][Math.floor(Math.random() * 4)];
-  fw.style.left = Math.random() * 100 + 'vw';
-  fw.style.top = Math.random() * 100 + 'vh';
-  document.body.appendChild(fw);
+  // YES click
+  yes.onclick = () => {
+    overlay.style.display = 'flex';
 
-  setTimeout(() => fw.remove(), 6500);
-}
+    const fireworkInterval = setInterval(() => {
+      for (let i = 0; i < 15; i++) {
+        const f = document.createElement('div');
+        f.className = 'firework';
+        f.textContent = ['🎆','🎇','💥','✨','💖'][Math.floor(Math.random()*5)];
+        f.style.left = Math.random() * 100 + 'vw';
+        f.style.top = Math.random() * 100 + 'vh';
+        document.body.appendChild(f);
+        setTimeout(() => f.remove(), 3000);
+      }
+    }, 400);
 
+    setTimeout(() => clearInterval(fireworkInterval), 30000);
+  };
+
+  no.onclick = () => move(no);
+};
+</script>
+
+</body>
+</html>
