--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Will You Be My Valentine?</title>
+<title>Will You Be My Valentine, Sarah?</title>
 
 <style>
 body {
@@ -31,7 +31,7 @@ body {
 h1 { color: #ff4d6d; }
 
 img.cat {
-  width: 240px;
+  width: 400px;
   margin-top: 20px;
   border-radius: 15px;
 }
@@ -82,7 +82,7 @@ button {
 <body>
 
 <div class="card">
-  <h1>💖 Will you be my Valentine Sarah? 💖</h1>
+  <h1>💖 Will you be my Valentine, Sarah? 💖</h1>
   <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif">
 </div>
 
