--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ button {
 </div>
 
 <script>
-<script>
+window.onload = () => {
 const yesBtn = document.getElementById('yes');
 const noBtn = document.getElementById('no');
 const overlay = document.getElementById('overlay');
