--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sarah, will You Be My Valentine?</title>
-
 <style>
 body {
   margin: 0;
@@ -31,7 +31,7 @@ body {
 h1 { color: #ff4d6d; }
 
 img.cat {
-  width: 400px;
+  width: 300px;
   margin-top: 20px;
   border-radius: 15px;
 }
@@ -44,7 +44,7 @@ button {
   border: none;
   cursor: pointer;
   z-index: 5;
-  transition: left 0.8s ease, top 0.8s ease;
+  transition: left 0.8s ease, top 0.8s ease, transform 0.3s ease;
 }
 
 #yes { background: #ff4d6d; color: white; }
@@ -78,161 +78,152 @@ button {
 }
 </style>
 </head>
-
 <body>
 
 <div class="card">
   <h1>💖 Sarah, will you be my Valentine? 💖</h1>
-  <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif">
+  <img class="cat" src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif" alt="Cute cat">
 </div>
 
 <button id="yes">Yes 💕</button>
 <button id="no">No ❌</button>
 
 <div class="overlay" id="overlay">
-  <img src="https://media.giphy.com/media/9Ai5dIk8xvBm0/giphy.gif">
+  <img src="https://media.giphy.com/media/9Ai5dIk8xvBm0/giphy.gif" alt="Mr Bean doctor">
   <h1 style="color:white;">That’s right 😏</h1>
 </div>
 
 <script>
 window.onload = () => {
-const yesBtn = document.getElementById('yes');
-const noBtn = document.getElementById('no');
-const overlay = document.getElementById('overlay');
+  const yesBtn = document.getElementById('yes');
+  const noBtn = document.getElementById('no');
+  const overlay = document.getElementById('overlay');
 
-let yesScale = 1;
-let noScale = 1;
-let yesSpeedMultiplier = 1;
-let yesActive = true;
-let hesitationTimer;
-let shakeTimeout;
+  let yesScale = 1;
+  let noScale = 1;
+  let yesSpeedMultiplier = 1;
+  let yesActive = true;
+  let hesitationTimer;
+  let shakeTimeout;
 
-// -------------------- UTIL --------------------
-function randomPos(btn) {
-  const x = Math.random() * (window.innerWidth - btn.offsetWidth);
-  const y = Math.random() * (window.innerHeight - btn.offsetHeight);
-  btn.style.left = x + 'px';
-  btn.style.top = y + 'px';
-}
-
-function screenShake() {
-  document.body.style.transition = 'transform 0.05s';
-  document.body.style.transform = 'translate(6px, 6px)';
-  clearTimeout(shakeTimeout);
-  shakeTimeout = setTimeout(() => {
-    document.body.style.transform = 'translate(0,0)';
-  }, 120);
-}
-
-// -------------------- INITIAL POSITIONS --------------------
-yesBtn.style.position = 'absolute';
-noBtn.style.position = 'absolute';
-
-randomPos(yesBtn);
-randomPos(noBtn);
-
-// -------------------- NO DODGES MOUSE --------------------
-document.addEventListener('mousemove', e => {
-  const rect = noBtn.getBoundingClientRect();
-  const dx = e.clientX - (rect.left + rect.width / 2);
-  const dy = e.clientY - (rect.top + rect.height / 2);
-  const dist = Math.sqrt(dx * dx + dy * dy);
-  if (dist < 140) randomPos(noBtn);
-});
-
-// -------------------- YES SMOOTH MOVEMENT --------------------
-let targetX = Math.random() * (window.innerWidth - yesBtn.offsetWidth);
-let targetY = Math.random() * (window.innerHeight - yesBtn.offsetHeight);
-
-function animateYes() {
-  if (!yesActive) return;
-
-  const rect = yesBtn.getBoundingClientRect();
-  const dx = targetX - rect.left;
-  const dy = targetY - rect.top;
-
-  yesBtn.style.left = rect.left + dx * (0.07 / yesSpeedMultiplier) + 'px';
-  yesBtn.style.top = rect.top + dy * (0.07 / yesSpeedMultiplier) + 'px';
-
-  if (Math.abs(dx) < 8 && Math.abs(dy) < 8) {
-    targetX = Math.random() * (window.innerWidth - yesBtn.offsetWidth);
-    targetY = Math.random() * (window.innerHeight - yesBtn.offsetHeight);
+  // -------------------- UTIL --------------------
+  function randomPos(btn) {
+    const x = Math.random() * (window.innerWidth - btn.offsetWidth);
+    const y = Math.random() * (window.innerHeight - btn.offsetHeight);
+    btn.style.left = x + 'px';
+    btn.style.top = y + 'px';
   }
 
-  requestAnimationFrame(animateYes);
-}
-animateYes();
-
-// Stop YES after 10s
-setTimeout(() => { yesActive = false; }, 10000);
-
-// -------------------- YES MAGNET TO CURSOR --------------------
-document.addEventListener('mousemove', e => {
-  if (!yesActive) return;
-  const rect = yesBtn.getBoundingClientRect();
-  const dx = e.clientX - (rect.left + rect.width / 2);
-  const dy = e.clientY - (rect.top + rect.height / 2);
-  const dist = Math.sqrt(dx * dx + dy * dy);
-  if (dist < 180) {
-    yesBtn.style.left = rect.left + dx * 0.02 + 'px';
-    yesBtn.style.top = rect.top + dy * 0.02 + 'px';
+  function screenShake() {
+    document.body.style.transition = 'transform 0.05s';
+    document.body.style.transform = 'translate(6px, 6px)';
+    clearTimeout(shakeTimeout);
+    shakeTimeout = setTimeout(() => {
+      document.body.style.transform = 'translate(0,0)';
+    }, 120);
   }
-});
 
-// -------------------- NO CLICK CHAOS --------------------
-noBtn.addEventListener('click', () => {
+  // -------------------- INITIAL POSITIONS --------------------
+  yesBtn.style.position = 'absolute';
+  noBtn.style.position = 'absolute';
+
+  randomPos(yesBtn);
   randomPos(noBtn);
 
-  // YES grows
-  yesScale += 0.15;
-  if (yesScale > 2.2) yesScale = 2.2;
-  yesBtn.style.transform = `scale(${yesScale})`;
+  // -------------------- NO DODGES MOUSE --------------------
+  document.addEventListener('mousemove', e => {
+    const rect = noBtn.getBoundingClientRect();
+    const dx = e.clientX - (rect.left + rect.width / 2);
+    const dy = e.clientY - (rect.top + rect.height / 2);
+    const dist = Math.sqrt(dx * dx + dy * dy);
+    if (dist < 140) randomPos(noBtn);
+  });
 
-  // YES slows
-  yesSpeedMultiplier += 0.25;
-  if (yesSpeedMultiplier > 3) yesSpeedMultiplier = 3;
+  // -------------------- YES SMOOTH MOVEMENT --------------------
+  let targetX = Math.random() * (window.innerWidth - yesBtn.offsetWidth);
+  let targetY = Math.random() * (window.innerHeight - yesBtn.offsetHeight);
 
-  // NO shrinks
-  noScale -= 0.12;
-  if (noScale < 0.4) noScale = 0.4;
-  noBtn.style.transform = `scale(${noScale})`;
+  function animateYes() {
+    if (!yesActive) return;
+    const rect = yesBtn.getBoundingClientRect();
+    const dx = targetX - rect.left;
+    const dy = targetY - rect.top;
 
-  screenShake();
-});
+    yesBtn.style.left = rect.left + dx * (0.07 / yesSpeedMultiplier) + 'px';
+    yesBtn.style.top = rect.top + dy * (0.07 / yesSpeedMultiplier) + 'px';
 
-// -------------------- HESITATION FIREWORKS --------------------
-function hesitationFireworks() {
-  for (let i = 0; i < 20; i++) {
-    const fw = document.createElement('div');
-    fw.className = 'firework';
-    fw.textContent = ['🎆','🎇','✨','💖'][Math.floor(Math.random()*4)];
-    fw.style.left = Math.random()*100+'vw';
-    fw.style.top = Math.random()*100+'vh';
-    fw.style.fontSize = 20 + Math.random()*30 + 'px';
-    document.body.appendChild(fw);
-    setTimeout(() => fw.remove(), 6000);
+    if (Math.abs(dx) < 8 && Math.abs(dy) < 8) {
+      targetX = Math.random() * (window.innerWidth - yesBtn.offsetWidth);
+      targetY = Math.random() * (window.innerHeight - yesBtn.offsetHeight);
+    }
+
+    requestAnimationFrame(animateYes);
   }
-}
+  animateYes();
+  setTimeout(() => { yesActive = false; }, 12000);
 
-hesitationTimer = setTimeout(hesitationFireworks, 6000);
+  // -------------------- YES MAGNET TO CURSOR --------------------
+  document.addEventListener('mousemove', e => {
+    if (!yesActive) return;
+    const rect = yesBtn.getBoundingClientRect();
+    const dx = e.clientX - (rect.left + rect.width / 2);
+    const dy = e.clientY - (rect.top + rect.height / 2);
+    const dist = Math.sqrt(dx * dx + dy * dy);
+    if (dist < 180) {
+      yesBtn.style.left = rect.left + dx * 0.02 + 'px';
+      yesBtn.style.top = rect.top + dy * 0.02 + 'px';
+    }
+  });
 
-// -------------------- YES CLICK --------------------
-yesBtn.addEventListener('click', () => {
-  overlay.style.display = 'flex';
-  clearTimeout(hesitationTimer);
+  // -------------------- NO CLICK CHAOS --------------------
+  noBtn.addEventListener('click', () => {
+    randomPos(noBtn);
 
-  for (let i = 0; i < 70; i++) {
-    const fw = document.createElement('div');
-    fw.className = 'firework';
-    fw.textContent = ['🎆','🎇','✨','💖','🔥'][Math.floor(Math.random()*5)];
-    fw.style.left = Math.random()*100+'vw';
-    fw.style.top = Math.random()*100+'vh';
-    fw.style.fontSize = 24 + Math.random()*36 + 'px';
-    document.body.appendChild(fw);
-    setTimeout(() => fw.remove(), 12000);
+    yesScale += 0.15;
+    if (yesScale > 2.2) yesScale = 2.2;
+    yesBtn.style.transform = `scale(${yesScale})`;
+
+    yesSpeedMultiplier += 0.25;
+    if (yesSpeedMultiplier > 3) yesSpeedMultiplier = 3;
+
+    noScale -= 0.12;
+    if (noScale < 0.4) noScale = 0.4;
+    noBtn.style.transform = `scale(${noScale})`;
+
+    screenShake();
+  });
+
+  // -------------------- HESITATION FIREWORKS --------------------
+  function hesitationFireworks() {
+    for (let i = 0; i < 20; i++) {
+      const fw = document.createElement('div');
+      fw.className = 'firework';
+      fw.textContent = ['🎆','🎇','✨','💖'][Math.floor(Math.random()*4)];
+      fw.style.left = Math.random()*100+'vw';
+      fw.style.top = Math.random()*100+'vh';
+      fw.style.fontSize = 20 + Math.random()*30 + 'px';
+      document.body.appendChild(fw);
+      setTimeout(() => fw.remove(), 10000);
+    }
   }
-});
+
+  hesitationTimer = setTimeout(hesitationFireworks, 10000);
+
+  // -------------------- YES CLICK --------------------
+  yesBtn.addEventListener('click', () => {
+    overlay.style.display = 'flex';
+    clearTimeout(hesitationTimer);
+
+    for (let i = 0; i < 70; i++) {
+      const fw = document.createElement('div');
+      fw.className = 'firework';
+      fw.textContent = ['🎆','🎇','✨','💖','🔥'][Math.floor(Math.random()*5)];
+      fw.style.left = Math.random()*100+'vw';
+      fw.style.top = Math.random()*100+'vh';
+      fw.style.fontSize = 24 + Math.random()*36 + 'px';
+      document.body.appendChild(fw);
+      setTimeout(() => fw.remove(), 16000);
+    }
+  });
+};
 </script>
-
-</body>
-</html>
